@startuml architecture
' UML class diagram: how the ecorefs core plugin extends the EMF persistence API.
' Stereotypes mark the origin of each class; the ecorefs classes also get a light fill.
' The layout is a grid of three rows. Each row holds one class of EMF on the left
' and the ecorefs class that extends the EMF class on the right, so the rows read
' from left to right. Hidden edges stack the rows.
!include style.iuml
allowmixing
hide empty members
skinparam defaultFontSize 11
skinparam nodesep 32
skinparam ranksep 24

class ResourceFactoryImpl <<EMF>>
class IPFSResourceFactoryImpl <<ecorefs>> {
  +createResource(uri)
}
class IPFSResourceImpl <<ecorefs>> {
  +save(options)
}
class XMIResourceImpl <<EMF>>
class URIHandlerImpl <<EMF>>
class IPFSURIHandlerImpl <<ecorefs>> {
  +createInputStream(uri)
}
enum ReferenceMode <<ecorefs>> {
  CID
  IPNS
}
node "IPFS node\n(Kubo)" as Kubo

' Layout as a grid of two columns and four rows:
'   ResourceFactoryImpl   IPFSResourceFactoryImpl
'   XMIResourceImpl       IPFSResourceImpl
'   IPFS node (Kubo)      ReferenceMode
'   IPFSURIHandlerImpl    URIHandlerImpl
ResourceFactoryImpl <|-right- IPFSResourceFactoryImpl
XMIResourceImpl <|-right- IPFSResourceImpl
URIHandlerImpl <|-left- IPFSURIHandlerImpl

ResourceFactoryImpl -[hidden]down- XMIResourceImpl
XMIResourceImpl -[hidden]down- Kubo
Kubo -[hidden]right- ReferenceMode
Kubo -[hidden]down- IPFSURIHandlerImpl
ReferenceMode -[hidden]down- URIHandlerImpl

IPFSResourceFactoryImpl ..> IPFSResourceImpl : <<create>>
IPFSResourceImpl ..> ReferenceMode : mode
IPFSResourceImpl --> Kubo : add,\nname/publish
IPFSURIHandlerImpl -up-> Kubo : cat,\nname/resolve
@enduml
